kubernetes/learning/ingress/ingress-sub.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name
  namespace: namespace
  labels:
    app.kubernetes.io/name: wordpress
spec:
  rules:
  - host: sub.domain.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service_name
            port:
              number: 80
